--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,10 +1,15 @@
+html{
+  color:  #2D3748;
+}
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   font-size: 14px;
   line-height: 1.5;
+  color: rgb(226, 241, 159);
 }
 
 .container {
   max-width: 960px;
   margin: 0 auto;
 }
+
